--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,16 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+			<version>3.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-messaging</artifactId>
+			<version>6.1.11</version>
+		</dependency>
 	</dependencies>
 
 	<build>
